# CWR-CE

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .trident.env.example  AGENTS.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  CREDITS.md  LICENSE  README.md  THIRD_PARTY_NOTICES.md  lsan-suppressions.txt  tsan-suppressions.txt  ubsan-suppressions.txt  valgrind-suppressions.supp  vcpkg.json
.agent/: PoseidonVK_integration_plan.md  agentinstructions.md  benchmarking.md
apps/: README.md
apps/cwr/Game/: CMakeLists.txt  GameApplication.cpp  GameApplication.hpp  HighPerformanceGpuHint.cpp  WinMain.cpp  resource.rc  version.rc2
apps/cwr/GameBase/: CMakeLists.txt  GameBase.cpp  GameBase.hpp
apps/cwr/GameDemo/: CMakeLists.txt  GameDemoApplication.cpp  GameDemoApplication.hpp  WinMain.cpp
apps/cwr/Server/: CMakeLists.txt  ServerApplication.cpp  ServerApplication.hpp  ServerMain.cpp  version.rc2
apps/fuzzers/Fuzzer/: CMakeLists.txt  fuzz_decode_msg.cpp  fuzz_init.hpp  fuzz_lip.cpp  fuzz_p3d.cpp  fuzz_paa.cpp  fuzz_paramfile.cpp  fuzz_pbo.cpp  fuzz_rtm.cpp  fuzz_savegame.cpp  fuzz_shape.cpp  fuzz_sqf.cpp  fuzz_sqf_exec.cpp  fuzz_sqs.cpp  fuzz_stringtable.cpp  fuzz_structure.hpp  fuzz_wav.cpp  fuzz_wrp.cpp  fuzz_wss.cpp
apps/tetris/Tetris/: CMakeLists.txt  NotebookScene.cpp  NotebookScene.hpp  TetrisApplication.cpp  (+6 more)
apps/tools/BlenderAddon/: Makefile  README.md  package.ps1  pyproject.toml
apps/tools/BlenderAddon/io_import_p3d/: __init__.py  blender_manifest.toml  helpers.py  import_p3d.py  operators.py  p3d_lib.py  panels.py
apps/tools/Evaluator/: CMakeLists.txt
apps/tools/Evaluator/Cli/: main.cpp
apps/tools/TcLister/: CMakeLists.txt  listplug.h  pluginst.inf  tc_lister.cpp  tc_lister.def
apps/tools/TcPbo/: CMakeLists.txt  pluginst.inf  tc_pbo.cpp  tc_pbo.def  wcxhead.h
cmake/: BuildConfig.h.in  CatchAddWindowsSafeTests.cmake  CatchWindowsSafe.cmake  CheckFileSize.cmake  DistCopy.cmake  FindLLVMSanitizer.cmake  GenerateBuildInfo.cmake  RunTridentCTest.cmake  TridentCTest.cmake
cmake/presets/: base.json  linux.json  sanitizers.json  windows.json
cmake/toolchains/: linux-x64-clang-fuzz.cmake  linux-x64-clang-san.cmake  linux-x64-clang-tsan.cmake  linux-x64-clang.cmake  static-crt-flags-override.cmake  win-x64-clang-fuzz.cmake  win-x64-clang-san.cmake  win-x64-clang-static.cmake  win-x64-clang.cmake
cmake/vcpkg-triplets/: x64-linux-clang-san.cmake  x64-linux-clang.cmake  x64-windows-clang-san.cmake  x64-windows-clang-static.cmake  x64-windows-clang.cmake
docker/papa-bear-master-service/: Dockerfile
docker/steamrt4/: Dockerfile  run-build.sh
engine/: README.md
engine/Evaluator/: EvalState.cpp  EvalState.hpp  EvaluatorHost.cpp  EvaluatorHost.hpp  EvaluatorRuntimeAnchor.cpp  EvaluatorRuntimeStubs.cpp  MockObjects.cpp  MockObjects.hpp  SqsRunner.cpp  SqsRunner.hpp  Validate.cpp  Validate.hpp  express.cpp  express.hpp
engine/Poseidon/: .gitignore  CMakeLists.txt
engine/PoseidonFormats/: CMakeLists.txt  PoseidonFormats.cpp  PoseidonFormats.h
engine/PoseidonGL33/: CMakeLists.txt  EngineGL33.cpp  EngineGL33.hpp  EngineGL33_2D.cpp  EngineGL33_2DRendering.cpp  EngineGL33_Draw.cpp  EngineGL33_DrawShared.cpp  EngineGL33_Lifecycle.cpp  EngineGL33_Material.cpp  EngineGL33_Mesh.cpp  EngineGL33_Queue.cpp  EngineGL33_Shaders.cpp  EngineGL33_ShadowDepth.cpp  EngineGL33_State.cpp  EngineGL33_VertexBuffer.cpp  GL33BindCache.cpp  GL33BindCache.hpp  GLVertexAttribLayouts.hpp  GraphicsBackendGL33.cpp  SDLEventWindow.hpp  TextureBankGL33_Cache.cpp  TextureBankGL33_Core.cpp  TextureGL33.hpp  TextureGL33_Init.cpp  TextureGL33_Loading.cpp
engine/PoseidonOpenAL/: CMakeLists.txt  EFXPresets.hpp  OpenALRuntime.hpp  SoundSystemOAL.cpp  SoundSystemOAL.hpp  WaveOAL.cpp  WaveOAL.hpp  WaveStreamingBuffers.hpp
engine/PoseidonVK/: BootstrapPushConstantsVK.hpp  BufferVK.cpp  BufferVK.hpp  CMakeLists.txt  CloudConstantsVK.hpp  DescriptorBindingsVK.hpp  EngineVK.cpp  EngineVK.hpp  EngineVK_Shadow.cpp  FrameConstantsVK.hpp  GpuSceneVK.hpp  GraphicsBackendVK.cpp  MeshBuilderVK.hpp  MeshRegistryVK.hpp  PipelineCacheVK.hpp  RenderStateVK.hpp  SceneDrawCommandsVK.hpp  ScenePushConstantsVK.hpp  ScreenPushConstantsVK.hpp  ShaderCompilerVK.cpp  ShaderCompilerVK.hpp  TerrainVK.cpp  TerrainVK.hpp  TextBankVK.cpp  TextBankVK.hpp  TextureVK.cpp  TextureVK.hpp  VertexBufferVK.cpp  VertexBufferVK.hpp  VertexLayoutVK.hpp
engine/Random/: isaac.hpp  randomGen.cpp  randomGen.hpp
engine/Trident/: Cargo.toml
mserver/: .dockerignore  README.md
mserver/Archive/: Cargo.toml
mserver/Archive/src/: lib.rs  lzss.rs  pbo.rs
mserver/CLI/: Cargo.toml
mserver/CLI/src/: main.rs
mserver/CLI/tests/: cli_roundtrip.rs
mserver/Client/: Cargo.toml
mserver/Client/examples/: probe.rs
mserver/Client/src/: codec.rs  framing.rs  lib.rs  query.rs
mserver/MasterService/: .dockerignore  Cargo.toml
mserver/MasterService/dev-data/: dev_mods_seed.csv
mserver/MasterService/src/: dev_seed.rs  http.rs  lib.rs  main.rs  model.rs  mods.rs  probe.rs  repository.rs  service.rs
mserver/MasterService/web/: browser-detail.html  browser.html  index.html  mod-detail.html  mods.html
mserver/MasterService/web/assets/: papa-bear.js  site.css
resources/: icon-demo.rc  icon-game.rc  icon-launcher.rc  icon-server.rc  icon-tool.rc
tests/: README.md
tests/e2e/: master_server_browser_visibility.test.sqf
tests/fixtures/: ASSET_SOURCES.md
tests/smoke/: audio_config.tests.ps1  audio_volume_persist.tests.ps1  boot_logs.tests.ps1  difficulty_persist.tests.ps1  display_apply_persist.tests.ps1  display_config.tests.ps1  display_disabled_rows.tests.ps1  editor_mission_folder.tests.ps1  graphics_apply_persist.tests.ps1  graphics_config.tests.ps1  menu_chrome_render.tests.ps1
tests/unit/apps/Evaluator/: CMakeLists.txt  eval_fixture.hpp  test_errors.cpp  test_expressions.cpp  test_fixtures.hpp  test_format.cpp  test_host_api.cpp  test_integration.cpp  test_mock_objects.cpp  test_parity_fixtures.cpp  test_sqs_integration.cpp  test_sqs_runner.cpp  test_stubs.cpp  test_stubs_output.cpp  test_validate.cpp
(+2035 files in other folders)
