[package]
name = "papa-bear-archive"
version = "0.1.0"
edition = "2021"
description = "PapaBear PBO archive: byte-compatible OFP/Poseidon pack & unpack"
license = "MIT"
rust-version = "1.79"

[dependencies]
anyhow = "1"
walkdir = "2"

[dev-dependencies]
tempfile = "3"

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
doc_markdown = "allow"
