[package]
name = "papa-bear-client"
version = "0.1.0"
edition = "2021"
description = "PapaBear protocol client SDK (server-status query; browse/workshop later)"
license = "MIT"
rust-version = "1.79"

[dependencies]

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
doc_markdown = "allow"
